# prob-theory-lab1

./: Cargo.toml  README.md
src/: lib.rs  task2.rs  task3.rs  task4.rs
